# Fairlens

./: .gitignore  Makefile  README.md
ML/files/: README.md  database.py  llm_context.py  main.py  pipeline.py  requirements.txt  schemas.py
ML/files (2)/: database.py  main.py  pipeline.py  schemas.py
ML/files/alembic/: env.py
Plans/: README.md
backend/: .gitignore  AGENTS.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/db/: connection.py  models.py
backend/metrics/: fairness.py  statistical.py
backend/pipeline/: bias_detector.py  explainer.py  graph.py  profiler.py  state.py
backend/rag/: ingest.py  retriever.py
backend/rag/knowledge_base/: ecoa_fair_lending.md  eeoc_guidelines.md  eu_ai_act.md  iso_24027_bias.md  nist_ai_rmf.md
backend/routes/: audit.py  report.py  upload.py
backend/schemas/: audit.py
features/: 01_project_setup.md  02_database_and_models.md  03_dataset_upload.md  04_data_profiler.md  05_bias_detection.md  06_llm_explainer.md  07_dashboard_ui.md  08_remediation_engine.md  09_audit_report.md  10_audit_history.md  11_sample_datasets.md  12_intersectional_analysis.md  README.md
frontend/: AGENTS.md  DESIGN.md  PRODUCT.md  next.config.ts  package-lock.json  package.json  patch_main.py  patch_main_2.py  test2.py  test_e2e.py  test_remediate.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/diagnostics/: page.tsx
frontend/components/: cta-section.tsx  features-bento.tsx  footer.tsx  hero-195.tsx  hero-awwwards.tsx  hero.tsx  hero206.tsx  navbar.tsx
frontend/lib/: api.ts
(+2 files in other folders)
