[project]
name = "fairlens-backend"
version = "0.1.0"
description = "FairLens AI Bias Detection & Remediation Platform - Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "openpyxl>=3.1.0",
    "fairlearn>=0.10.0",
    "aif360>=0.6.1",
    "scikit-learn>=1.5.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
]
